# WorldFoundry

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  environment.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: benchmark_integration_request.md  bug_report.md  config.yml  model_integration_request.md
.github/workflows/: ci.yml  deploy-docs.yml
docker/: Dockerfile  build_with_docker.sh
docs/fumadocs/: .gitignore  next.config.mjs  package-lock.json  package.json  source.config.ts
docs/fumadocs/app/: global.css  layout.tsx
docs/fumadocs/components/: benchmark-badge.tsx  call-chain-diagram.tsx  docs-breadcrumb.tsx  docs-inline-toc.tsx  docs-mobile-nav.tsx  docs-page.tsx  docs-pagination.tsx  docs-reading-progress.tsx  docs-related-links.tsx  docs-scroll-bridge.tsx  docs-search-trigger.tsx  docs-sidebar-architecture-tree.tsx  docs-sidebar-benchmark-tree.tsx  docs-sidebar-metrics-tree.tsx  docs-sidebar-nav-tree.tsx  docs-toc-links.tsx  docs-toc-rail.tsx  docs-toc.tsx  ecosystem-page.tsx  mdx.tsx  metric-quick-nav.tsx  provider.tsx  search.tsx  site-nav.tsx  site-search-trigger.tsx  studio-visualizer-gallery.tsx  teaser-image.tsx  worldfoundry-wordmark.tsx
docs/fumadocs/lib/: benchmark-catalog-status.json  benchmark-catalog.ts  brand-font.ts  docs-breadcrumb.ts  docs-last-updated.ts  docs-navigation.ts  docs-page-server.ts  docs-pagination.ts  docs-related-links.ts  docs-sidebar-shared.ts  docs-sidebar.ts  i18n.ts  layout.shared.tsx  metric-quick-nav.ts  model-recipes-data.json  model-recipes-index.json  shared.ts  site-links.ts  (+3 more)
requirements/: worldfoundry-unified.txt
scripts/: download_hfd_models.sh  generate_metrics_usage_mdx.py  run_worldscore_eval_local.sh
scripts/benchmark_zoo/: run_video_model_benchmark_suite.py
scripts/dev/: check_dev_tools.py
scripts/docs/: benchmark_environment_setup.json  benchmark_metric_focus.json  benchmark_readme_intros.json  build.sh  generate_benchmark_subpages.py  inline_metrics_assets.py  inline_metrics_references.py
scripts/embodied/: mirror_docker_images.py  prepare_official_assets.py  run_dlc_embodied_eval.sh  submit_dlc_embodied_eval.sh
scripts/inference/: prepare_model_infer.sh  run_3d_scene_infer.py  run_depth_infer.py  run_in_tree_model_infer.py  run_infer.sh  run_wan21_infer.py  test_nav_video_gen.sh
scripts/model_zoo/: download_checkpoints.py  materialize_base_model_assets.py  matrix_game2_demo_common.py  matrix_game_parity_worker.py  run_hunyuanvideo15_t2v_official_demo.sh  run_hunyuanvideo15_t2v_worldfoundry_runner_demo.py  run_hunyuanvideo_i2v_official_demo.sh  run_hunyuanvideo_i2v_worldfoundry_runner_demo.py  run_hunyuanvideo_i2v_worldfoundry_runner_demo.sh  run_hunyuanvideo_t2v_official_demo.sh  run_hunyuanvideo_t2v_worldfoundry_runner_demo.py  run_hunyuanvideo_t2v_worldfoundry_runner_demo.sh  run_matrix_game2_official_demo.py  run_matrix_game2_worldfoundry_runner_demo.py  run_mochi1_preview_official_demo.sh  run_wan21_t2v_1p3b_official_demo.sh  run_wan21_t2v_1p3b_worldfoundry_runner_demo.py  run_wan22_ti2v_5b_official_demo.sh  run_wan22_ti2v_5b_worldfoundry_runner_demo.py
scripts/setup/: bootstrap_worldfoundry.sh  conda_install.sh  conda_profile_install.sh  conda_utils.sh  download_embodied_action_official_assets.py  install_flash_attn.sh  link_hf_checkpoints.sh  model_env_install.sh  prepare_benchmark_assets.py  prepare_embodied_official_assets.py  setup.sh  unified_install.sh  verify_flash_attn.py
scripts/workspace/: run_workspace.sh
worldfoundry/: __init__.py  __main__.py
worldfoundry/base_models/: __init__.py  capabilities.py
worldfoundry/cli/: __init__.py  __main__.py  config.py  dataset.py  embodied.py  main.py  mcp.py  models.py  plan_metric.py  preflight.py  reporting.py  tasks.py  tui.py  tui_app.py  tui_app.tcss  tui_brand.py  tui_discovery.py  tui_icons.py  utils.py  zoo.py
worldfoundry/core/: __init__.py  action_normalization.py  camera_trajectory.py  device.py  geometry.py  gradient.py  inference.py  inference_state.py  log_filters.py  process.py  realtime.py  registry.py  runtime_cache.py  spatial_warp.py  time.py
worldfoundry/data/: __init__.py  io.py
worldfoundry/evaluation/: __init__.py  __main__.py  framework.py  public.py  runner.py  utils.py
worldfoundry/mcp/: __init__.py  __main__.py  client.py  server.py
worldfoundry/operators/: __init__.py  _media.py  ac3d_operator.py  act_operator.py  animatediff_operator.py  astra_operator.py  base_operator.py  being_h05_operator.py  cameractrl_operator.py  cosmos_predict2p5_operator.py  cut3r_operator.py  depth_anything_operator.py  depth_anything_v3_operator.py  diffusion_policy_operator.py  dreamdojo_operator.py  dreamzero_operator.py  dualcamctrl_operator.py  dvlt_operator.py  embodied_action_operator.py  fantasy_world_operator.py  flash_world_operator.py  forcing_operator.py  gen3c_operator.py  geometry_prior_operator.py  giga_brain_0_operator.py  giga_world_policy_operator.py  gr00t_operator.py  hailuo_2p3_operator.py  hunyuan_game_craft_operator.py  hunyuan_mirror_operator.py  hunyuan_world_voyager_operator.py  hunyuan_worldplay_operator.py  infinite_vggt_operator.py  infinite_world_operator.py  irasim_operator.py  kairos_operator.py  kling_api_operator.py  lapa_operator.py  lingbot_map_operator.py  lingbot_va_operator.py  (+49 more)
worldfoundry/pipelines/: api_runtime.py  component_pipelines.py  pipeline_utils.py
worldfoundry/representations/: __init__.py  base_representation.py
worldfoundry/runtime/: __init__.py  assets.py  benchmark_repos.py  compile_cache.py  conda.py  cuda_tiers.py  env.py  in_tree_cli.py  jobs.py  local_checkpoint_cache.py  performance.py  probes.py
worldfoundry/studio/: __init__.py  app.py  catalog.py  cli.py  conda_dispatch.py  execution.py  gradio_runtime.py  interfaces.py  jobs.py  launch_config.py  native_app.py  runtime_job.py  runtime_paths.py  studio_catalog.py  theme.py  variants.py  workspace_app.py  workspace_job.py
worldfoundry/synthesis/: __init__.py  base_synthesis.py
(+10109 files in other folders)
